fix tag overflow wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -269,6 +269,7 @@ p code {
 
 .post-tags {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin: auto;
     padding-left: 0;
